--- a/index.html
+++ b/index.html
@@ -3,26 +3,55 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/styles/main.css">
-    <title>Three.JS-Webpack Boilerplate</title>
+    <title>경상국립대학교 멋쟁이사자처럼 11기</title>
+    <script src="public/bundle.js" defer></script>
   </head>
   <body>
-    <!-- Information modal -->
-    <a id="open-modal-btn" class="float">
-      <i class="icon-float material-icons">menu</i>
-    </a>
-    <div id="info-modal" class="modal">
-      <div class="modal-content">
-        <span class="close-modal-btn">&times;</span>
-        <h3>Welcome to my Three.JS-Webpack boilerplate!</h3>
-        <p>It is a great and easy way to bootstrap Three.Js project.</p>
-        <p>To get started clone the repo <code>git clone https://github.com/aakatev/three-js-webpack.git</code>.</p>
-        <p>For more information, navigate to the <a href="https://github.com/aakatev/three-js-webpack">project GitHub page</a>!</p>
-      </div>
-    </div>
-    <!-- End information modal -->
+    <div class="wrap">
+      <canvas id="c"></canvas>
+      <nav class="nav">
+        <div class="logo">
+          <img src="./static/img/likelion _logo.png">
+        </div>
 
-    <script src="public/bundle.js"></script>
+        <div class="nav_bar">
+          <div class="nav_item">지원서 작성</div>
+          <div class="nav_item">동아리 소개</div>
+          <div class="nav_item loginBtn logoutEle">로그인/회원가입</div>
+          <div class="nav_item loginBtn loginEle unactive">마이페이지</div>
+          <div class="underbar"></div>
+        </div>
+      </nav>
+  
+      <div class="contents ">
+
+        <div class="textContent logoutEle">
+          <div class="sub_text">
+            2.20~3.08 지원서 접수
+          </div>
+          <div class="main_text">
+            경상국립대학교<br>
+            <span style="color: #FF7710;">멋쟁이 사자처럼 11기</span> 여러분<br>
+            환영합니다.
+          </div>
+        </div>
+
+        <div class="btn applyBtn logoutEle">
+          지원하기<span style="margin-left:3px">></span>
+        </div>
+
+
+        <div class="textContent2 loginEle unactive">
+          지원서 접수가<br>완료 되었습니다.
+        </div>
+        <div class="loginBtns loginEle unactive">
+          <div class="btn"><span style="margin-right: 3px;"> < </span>수정하러가기</div>
+          <div class="btn">지원 취소하기<span style="margin-left: 3px;"> > </span></div>
+        </div>
+
+      </div>
+
+    </div>
   </body>
 </html>
